# serializer version: 1
# name: test_all_entities[switch.m_sens_salon-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.m_sens_salon',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '47846_leaf_0_cb8f_rel_0_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.m_sens_salon-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'switch',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'm-sens salon',
    }),
    'context': <ANY>,
    'entity_id': 'switch.m_sens_salon',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.m_sens_salon_gniazdo_taras-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.m_sens_salon_gniazdo_taras',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Gniazdo Taras',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.OUTLET: 'outlet'>,
    'original_icon': None,
    'original_name': 'Gniazdo Taras',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '47846_leaf_0_cb8f_rel_0_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.m_sens_salon_gniazdo_taras-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'outlet',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'm-sens salon Gniazdo Taras',
    }),
    'context': <ANY>,
    'entity_id': 'switch.m_sens_salon_gniazdo_taras',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
